// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryListItem should render and match snapshot 1`] = `
<CategoryEntry__Row>
  <CategoryEntry__StyledLink
    to="/augsburg/de/willkommen"
  >
    <CategoryEntry__CategoryThumbnail
      alt=""
      src="https://cms.integreat-ap…03/Beratung-150x150.png"
    />
    <CategoryEntry__CategoryListItem>
      <Highlighter
        aria-label="Willkommen"
        highlightStyle={
          Object {
            "backgroundColor": "#ffffff",
            "fontWeight": "bold",
          }
        }
        sanitize={[Function]}
        searchWords={Array []}
        textToHighlight="Willkommen"
      />
      <div
        style={
          Object {
            "fontSize": "12px",
            "margin": "0 5px",
          }
        }
      />
    </CategoryEntry__CategoryListItem>
  </CategoryEntry__StyledLink>
  <CategoryEntry__SubCategory
    key="a36a57"
  >
    <CategoryEntry__StyledLink
      to="/augsburg/de/test"
    >
      <CategoryEntry__SubCategoryCaption
        aria-label="Child"
        searchWords={Array []}
        textToHighlight="Child"
      />
    </CategoryEntry__StyledLink>
  </CategoryEntry__SubCategory>
</CategoryEntry__Row>
`;

exports[`CategoryListItem should replace empty thumbnail 1`] = `
<CategoryEntry__Row>
  <CategoryEntry__StyledLink
    to="/augsburg/de/willkommen/willkommen-in-augsburg"
  >
    <CategoryEntry__CategoryThumbnail
      alt=""
      src="test-file-stub"
    />
    <CategoryEntry__CategoryListItem>
      <Highlighter
        aria-label="GotNoThumb :O"
        highlightStyle={
          Object {
            "backgroundColor": "#ffffff",
            "fontWeight": "bold",
          }
        }
        sanitize={[Function]}
        searchWords={Array []}
        textToHighlight="GotNoThumb :O"
      />
      <div
        style={
          Object {
            "fontSize": "12px",
            "margin": "0 5px",
          }
        }
      />
    </CategoryEntry__CategoryListItem>
  </CategoryEntry__StyledLink>
  <CategoryEntry__SubCategory
    key="a36a58"
  >
    <CategoryEntry__StyledLink
      to="/augsburg/de/willkommen/willkommen-in-augsburg"
    >
      <CategoryEntry__SubCategoryCaption
        aria-label="GotNoThumb :O"
        searchWords={Array []}
        textToHighlight="GotNoThumb :O"
      />
    </CategoryEntry__StyledLink>
  </CategoryEntry__SubCategory>
</CategoryEntry__Row>
`;
